# luas

./: .readthedocs.yaml  2D GP Optimisations (NumPy tutorial).ipynb  GP_Class.py  KernelClass.py  LICENSE  README.md  kernel_functions.py  kronecker_fn.py  luas_tutorial.ipynb  pyproject.toml  requirements.txt  sample_kernels.py  sample_mf.py  setup.py
docs/: requirements.txt
docs/source/: GP.rst  GeneralKernel.rst  LuasKernel.rst  api.md  conf.py  exoplanet.rst  getting_started.md  index.md  index.rst  info_about_jax.md  installation.md  installation_info.md  jax_convenience_fns.rst  kernels.rst  kronecker_fns.rst  luas.exoplanet.rst  luas.rst  luas_for_exoplanets.md  numpyro_ext.rst  pymc_ext.rst  things_to_know.md  tutorials.md  when_to_use.md  why_use_luas.md
docs/source/_templates/autosummary/: class.rst  function.rst  method.rst
docs/source/tutorials/: 2D_GP_intro.ipynb  Numpyro Example.ipynb  PyMC Example.ipynb  numpy tutorial.ipynb
docs/source/tutorials/sample_data/: Y_clean.npy  p_opt2.pkl
docs/source/tutorials/sample_data/WASP31b_FORS2_600B/: Y.npy  Y_binned.npy  ld_coeff_errs.npy  x_l.npy  x_t_binned.npy
sample_data/WASP31b_FORS2_600B/: ld_coeff.npy  wl_solution.npy  x_t.npy
sample_notebooks/: 2D GP Optimisations (NumPy tutorial).ipynb  Sample VLT analysis-Copy1.ipynb  Sample VLT analysis.ipynb
src/luas/: GP.py  GPClass.py  GeneralKernel.py  LuasKernel.py  VLT_general_run.py  __init__.py  jax_convenience_fns.py  kernel_functions.py  kernels.py  kronecker_fns.py  kronecker_functions.py  luas_types.py  numpyro_ext.py  pymc_ext.py  test_GP.py  test_comment.py
src/luas/exoplanet/: __init__.py  sample_kernels.py  transit_fns.py  transit_functions.py
