[project]
name = "luas"
version = "0.0.1"
description = "A library for implementing efficient 2D Gaussian processes"
authors = [{ name = "Mark Fortune", email = "fortunma@tcd.ie" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
test = ["pytest"]
docs = [
    "numpy",
    "matplotlib",
    "tqdm",
    "jax", 
    "jaxlib",
    "astropy",
    "sphinx-book-theme",
    "myst-nb",
    "jaxoplanet==0.0.2",
    "numpyro",
    "pymc",
]
